# roboos

./: README
board/qemu/aarch64-virt/: linux.config
board/roboos/rilp/: CMakeLists.txt  Makefile  README.md  rilp_test
board/roboos/rilp/include/: rilp.h
board/roboos/rilp/src/: rilp.c  rilp_socket.c  rilp_test.c
board/roboos/rootfs_overlay/etc/: issue
configs/: roboos_final_defconfig  roboos_pi4_saved_defconfig  roboos_qemu_defconfig
package/rilp/: Config.in  rilp.mk
